fea: useState-like

--- a/other/index.html
+++ b/other/index.html
@@ -10,4 +10,5 @@
     
 </body>
 </html>
-<script src="./react-fiber-like.jsx"></script>
+<!-- <script src="./react-fiber-like.jsx"></script> -->
+<script src="./use-state-like.tsx"></script>
