--- a/berial-like/test/index.html
+++ b/berial-like/test/index.html
@@ -5,28 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="../dist/berial.js"></script>
+    <script src="../dist/umd/index.js"></script>
     <script>
-      (async (global) => {
-        const berial = global.berial;
+      ;(async (global) => {
+        const berial = global.berial
         const One = {
           count: 0,
           mount: (host) => {
-            console.log(host.count);
-            host.shadowRoot.innerHTML = `<button>${host.count}</button>`;
+            console.log(host.count)
+            host.shadowRoot.innerHTML = `<button>${host.count}</button>`
             host.shadowRoot.querySelector('button').onclick = () => host.count++
           },
-          unmount: (host) => (host.shadowRoot.innerHTML = ""),
-        };
+          unmount: (host) => (host.shadowRoot.innerHTML = ''),
+        }
 
         const Two = {
-          mount: (host) => (host.shadowRoot.innerHTML = "222"),
-          unmount: (host) => (host.shadowRoot.innerHTML = ""),
-        };
+          mount: (host) => (host.shadowRoot.innerHTML = '222'),
+          unmount: (host) => (host.shadowRoot.innerHTML = ''),
+        }
 
-        berial.define("app-one", One, "#/app1");
-        berial.define("app-two", Two, "#/app2");
-      })(window);
+        berial.define('app-one', One, '#/app1')
+        berial.define('app-two', Two, '#/app2')
+      })(window)
     </script>
   </head>
   <body>
