--- a/berial-like/test/index.html
+++ b/berial-like/test/index.html
@@ -2,44 +2,64 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+  </head>
+
+  <body>
+    <a onclick="a()">应用1</a>
+    <a onclick="b()">应用2</a>
+    <one-app></one-app>
+    <two-app></two-app>
     <script src="../dist/umd/index.js"></script>
     <script>
-      ;(async (global) => {
-        const berial = global.berial
-        const One = {
-          count: 0,
-          mount: (host) => {
-            console.log(host.count)
-            host.shadowRoot.innerHTML = `<button>${host.count}</button>`
-            host.shadowRoot.querySelector('button').onclick = () => host.count++
-          },
-          unmount: (host) => (host.shadowRoot.innerHTML = ''),
-        }
-
-        const Two = {
-          mount: (host) => (host.shadowRoot.innerHTML = '222'),
-          unmount: (host) => (host.shadowRoot.innerHTML = ''),
-        }
-
-        berial.define('app-one', One, '#/app1')
-        berial.define('app-two', Two, '#/app2')
-
-        /* 测试 sandbox */
-        window.a = 1;
-        berial.sandbox.mount()
-        berial.sandbox.sandbox.proxyWindow.b = 2;
-        /* 这里会输出 window 对象的a属性 跟 沙箱内代理对象的 b 属性 */
-        console.log(berial.sandbox.sandbox.proxyWindow.a, berial.sandbox.sandbox.proxyWindow.b)
-      })(window)
+      function a() {
+        history.pushState({}, '', '/a')
+      }
+      function b() {
+        history.pushState({}, '', '/b')
+      }
+      berial.register(
+        'one-app',
+        async (props) => {
+          console.log('加载时执行1')
+          return {
+            bootstrap: [
+              async (props) => {
+                console.log('bootstrap1')
+              },
+            ],
+            mount: async (props) => {
+              console.log('mount1')
+            },
+            unmount: async (props) => {
+              console.log('unmount1')
+            },
+          }
+        },
+        (location) => location.pathname.startsWith('/a'), // 根据路径来判断是否应该加载
+        { store: { name: 'zf', age: 10 } }
+      )
+      berial.register(
+        'two-app',
+        async (props) => {
+          console.log('加载时执行2')
+          return {
+            bootstrap: async (props) => {
+              console.log('bootstrap2')
+            },
+            mount: async (props) => {
+              console.log('mount2')
+            },
+            unmount: async (props) => {
+              console.log('unmount2')
+            },
+          }
+        },
+        (location) => location.pathname.startsWith('/b'),
+        { store: { name: 'zf', age: 10 } }
+      )
+      berial.start()
     </script>
-  </head>
-  <body>
-    <a href="#/app1">app1</a>
-    <a href="#/app2">app2</a>
-    <app-one></app-one>
-    <app-two></app-two>
   </body>
 </html>
