--- a/berial-like/test/index.html
+++ b/berial-like/test/index.html
@@ -60,6 +60,19 @@
         { store: { name: 'zf', age: 10 } }
       )
       berial.start()
+
+      const { scriptUrls, scripts } = berial.parseScript(`<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script src="./test.js" />
+</head>
+<body></body>
+</html>`)
+      console.log('scriptUrls, scripts', scriptUrls, scripts)
     </script>
   </body>
 </html>
