--- a/berial-like/test/sandbox.html
+++ b/berial-like/test/sandbox.html
@@ -5,19 +5,21 @@
     <title>快速上手</title>
     <script src="../dist/umd/index.js"></script>
     <script>
-      const { sandbox: box1, mount: box1Mount } = new berial.createSandbox()
-      box1Mount()
-      const { sandbox: box2, mount: box2Mount } = new berial.createSandbox()
-      box2Mount()
-      window.a = 0
-      ;((window) => {
-        window.a = 1
-        console.log(window.a) //1
-      })(box1.proxyWindow)
-      ;((window) => {
-        console.log(window.a) //0
-      })(box2.proxyWindow)
-      console.log(window.a) //0
+      setTimeout(() => {
+        new Promise(async () => {
+          const box1 = await berial.loadSandbox()
+          const box2 = await berial.loadSandbox()
+          window.a = 0
+          ;((window) => {
+            window.a = 1
+            console.log(window.a) //1
+          })(box1)
+          ;((window) => {
+            console.log(window.a) //0
+          })(box2)
+          console.log(window.a) //0
+        })
+      }, 1000)
     </script>
   </head>
   <body></body>
