--- a/berial-like/test/umd.html
+++ b/berial-like/test/umd.html
@@ -8,17 +8,18 @@
   <body>
     <script>
       ;(function (root, factory) {
-        root.app = factory()
+        root['three-app'] = factory()
+        console.log('document', document)
       })(window, function () {
         return {
           bootstrap: async (props) => {
-            console.log('bootstrap2')
+            console.log('bootstrap3')
           },
           mount: async (props) => {
-            console.log('mount2')
+            console.log('mount3')
           },
           unmount: async (props) => {
-            console.log('unmount2')
+            console.log('unmount3')
           },
         }
       })
