refactor: 完善demo 并修改代码至demo可用(存在应用卸载dom未清空的问题)

--- a/berial-like/test/umd.html
+++ b/berial-like/test/umd.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>umd</title>
+    <link rel="stylesheet" href="./umd.css" />
+    <style>
+      .umd-test {
+        font-size: 24px;
+      }
+    </style>
+    <style>
+      .umd-test2 {
+        color: red;
+      }
+    </style>
   </head>
   <body>
+    <div class="umd-css umd-test">umd</div>
+    <div class="umd-test2">color red</div>
     <script>
       ;(function (root, factory) {
         root['three-app'] = factory()
