--- a/berial-like/test/index.html
+++ b/berial-like/test/index.html
@@ -10,6 +10,7 @@
     <a href="#/app1">应用1</a>
     <a href="#/app2">应用2</a>
     <a href="#/app3">typeof entry === string</a>
+    <a href="#/vue">vue app</a>
     <one-app></one-app>
     <two-app></two-app>
     <three-app></three-app>
@@ -56,6 +57,11 @@
         'three-app',
         'http://localhost:1234/umd.html',
         (location) => location.hash === '#/app3'
+      )
+      berial.register(
+        'child-app',
+        'http://localhost:3002',
+        (location) => location.hash === '#/vue'
       )
       berial.start()
     </script>
