feat: vue子应用测试基本成功! 能正常载入. 下一步考虑 umount 隐藏dom

--- a/berial-like/test/index.html
+++ b/berial-like/test/index.html
@@ -14,6 +14,7 @@
     <one-app></one-app>
     <two-app></two-app>
     <three-app></three-app>
+    <child-app></child-app>
     <script src="../dist/umd/index.js"></script>
     <script>
       berial.register(
@@ -55,12 +56,12 @@
       )
       berial.register(
         'three-app',
-        'http://localhost:1234/umd.html',
+        'http://localhost:1235/umd.html',
         (location) => location.hash === '#/app3'
       )
       berial.register(
         'child-app',
-        'http://localhost:3002',
+        'http://localhost:2345',
         (location) => location.hash === '#/vue'
       )
       berial.start()
